Truffle Phase 3: ProtoPhysicalPlan -> Truffle backend + parity + gate
New truffle-backend (Scala 3, on GraalVM) bridges the Java fused-row node
library to the real IR. GNodes: general fused-row node library (column,
literal, +-*/, 6 comparisons, AND/OR/NOT, multi-column filter->project
root). ProtoTruffleCompiler compiles a numeric-subset ProtoPhysicalPlan
(Project/Filter over a TableScan) into a fused Truffle plan, decoding
numeric Arrow columns to double[].

Validated:
- Parity: the same Q6-selection ProtoPhysicalPlan over an Arrow batch runs
  through both PhysicalPlanExecutor and the Truffle backend; rows agree
  (TruffleBackendParitySpec). Third correctness-validated engine on real IR.
- Gate (Q6BackendBench, 65536 rows, filter-only, us/op): truffleExec 142,
  truffleFull 1266 (incl Arrow decode), scalaInterp ~14700 (leak-affected,
  order-of-magnitude). Fused Truffle ~100x the tree-walking interpreter;
  ~11x even with decode. Decode tax visible (truffleFull >> truffleExec).

Bounded honestly: numeric-double subset only; real TPC-H decimals, strings,
temporal, aggregates, joins, null 3VL are the remaining coverage gap. Not
wired into TpchCrossBackendSuite directly (lineitem is decimal). Recorded
in TRUFFLE_EXPLORATION.md §4 Phase 3.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>